--- a/server/UI/orders_list.ui
+++ b/server/UI/orders_list.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>600</width>
+    <height>480</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,9 +18,22 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>380</width>
-     <height>280</height>
+     <width>580</width>
+     <height>430</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>450</y>
+     <width>101</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Открыть</string>
    </property>
   </widget>
  </widget>
