--- a/customer_interface/choose_products.ui
+++ b/customer_interface/choose_products.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>650</width>
-    <height>600</height>
+    <height>650</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -45,7 +45,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="Basket">
     <property name="geometry">
      <rect>
       <x>320</x>
