--- a/customer_interface/basket.ui
+++ b/customer_interface/basket.ui
@@ -84,7 +84,7 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>350</x>
+      <x>360</x>
       <y>120</y>
       <width>171</width>
       <height>31</height>
@@ -102,7 +102,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>350</x>
+      <x>360</x>
       <y>210</y>
       <width>171</width>
       <height>31</height>
@@ -117,7 +117,7 @@
      <string>Телефон:</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="input_name">
     <property name="geometry">
      <rect>
       <x>350</x>
@@ -127,7 +127,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_2">
+   <widget class="QLineEdit" name="input_telephone">
     <property name="geometry">
      <rect>
       <x>350</x>
@@ -140,7 +140,7 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>350</x>
+      <x>360</x>
       <y>300</y>
       <width>171</width>
       <height>31</height>
@@ -155,23 +155,23 @@
      <string>Адрес:</string>
     </property>
    </widget>
-   <widget class="QTextEdit" name="textEdit">
+   <widget class="QLineEdit" name="input_address">
     <property name="geometry">
      <rect>
       <x>350</x>
       <y>340</y>
       <width>251</width>
-      <height>101</height>
+      <height>31</height>
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="make_order">
     <property name="geometry">
      <rect>
       <x>350</x>
-      <y>470</y>
+      <y>400</y>
       <width>251</width>
-      <height>41</height>
+      <height>111</height>
      </rect>
     </property>
     <property name="font">
