--- a/customer_interface/finish_page.ui
+++ b/customer_interface/finish_page.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>350</width>
-    <height>132</height>
+    <width>650</width>
+    <height>650</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,37 +17,37 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>51</width>
-      <height>16</height>
+      <x>90</x>
+      <y>70</y>
+      <width>441</width>
+      <height>61</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>18</pointsize>
+     </font>
     </property>
     <property name="text">
-     <string>Название</string>
+     <string>Ура! Заказ получен, ждите курьера.</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="inputName">
+   <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>30</y>
-      <width>331</width>
-      <height>20</height>
+      <x>90</x>
+      <y>190</y>
+      <width>261</width>
+      <height>61</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QPushButton" name="saveButton">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>60</y>
-      <width>91</width>
-      <height>23</height>
-     </rect>
+    <property name="font">
+     <font>
+      <pointsize>18</pointsize>
+     </font>
     </property>
     <property name="text">
-     <string>Сохранить</string>
+     <string>Заказать снова</string>
     </property>
    </widget>
   </widget>
@@ -56,7 +56,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>350</width>
+     <width>650</width>
      <height>21</height>
     </rect>
    </property>
