--- a/customer_interface/finish_page.ui
+++ b/customer_interface/finish_page.ui
@@ -19,7 +19,7 @@
      <rect>
       <x>90</x>
       <y>70</y>
-      <width>441</width>
+      <width>551</width>
       <height>61</height>
      </rect>
     </property>
@@ -48,6 +48,42 @@
     </property>
     <property name="text">
      <string>Заказать снова</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>440</y>
+      <width>431</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Что-то пошло не так? Позвоните нам:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>490</y>
+      <width>121</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>13</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Телефон</string>
     </property>
    </widget>
   </widget>
