--- a/customer_interface/finish_page.ui
+++ b/customer_interface/finish_page.ui
@@ -83,7 +83,25 @@
      </font>
     </property>
     <property name="text">
-     <string>Телефон</string>
+     <string>Телефон:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="telephone">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>480</y>
+      <width>231</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>18</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
     </property>
    </widget>
   </widget>
